# loci

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  config.example.toml
.github/workflows/: desktop-bundles.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  app.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/vscode-extension/: package.json
apps/vscode-extension/src/: extension.ts
crates/agent/: Cargo.toml
crates/agent/src/: executor.rs  lib.rs  planner.rs  trace.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codebase/: Cargo.toml
crates/codebase/src/: git_history.rs  indexer.rs  lib.rs  rust_parser.rs  scanner.rs  ts_parser.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  types.rs
crates/graph/: Cargo.toml
crates/graph/src/: graph.rs  lib.rs  store.rs  vector.rs
crates/knowledge/: Cargo.toml
crates/knowledge/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  config.rs  lib.rs  openai.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/skills/: Cargo.toml
crates/skills/src/: code_review.rs  commit_message.rs  doc_generate.rs  lib.rs  pr_description.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: file.rs  http.rs  knowledge_search.rs  lib.rs  memory_recall.rs  shell.rs
docs/: ROADMAP.md
docs/directions/: 00-comparison.md  01-sre-agent.md  03-codebase-understanding-agent.md  04-learning-agent.md
docs/eval/: samples.json
