[workspace]
resolver = "2"

members = [
    "crates/core",
    "crates/llm",
    "crates/memory",
    "crates/knowledge",
    "crates/agent",
    "crates/tools",
    "crates/storage",
    "crates/codebase",
    "crates/graph",
    "crates/skills",
    "crates/cli",
    "apps/server",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "chrono", "uuid"] }
axum = { version = "0.7", features = ["ws"] }
async-openai = "0.27"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
notify = { version = "6", features = ["macos_kqueue"] }
walkdir = "2"
tree-sitter = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"

[workspace.dependencies.hf-hub]
version = "0.3"
default-features = false
features = ["tokio"]
