[package]
name = "loci-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "loci"
path = "src/main.rs"

[dependencies]
loci-core = { path = "../../crates/core" }
loci-llm = { path = "../../crates/llm" }
loci-agent = { path = "../../crates/agent" }
loci-tools = { path = "../../crates/tools" }
loci-codebase = { path = "../../crates/codebase" }
loci-graph = { path = "../../crates/graph" }
loci-storage = { path = "../../crates/storage" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
loci-memory = { path = "../../crates/memory" }
loci-knowledge = { path = "../../crates/knowledge" }
uuid = { workspace = true }
chrono = { workspace = true }
loci-skills = { path = "../../crates/skills" }
notify = { workspace = true }
axum = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustyline = "14"
