[package]
name = "loci-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
loci-core = { path = "../../crates/core" }
loci-storage = { path = "../../crates/storage" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
