[package]
name = "loci-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
loci-core = { path = "../../crates/core" }
async-openai = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
