[package]
name = "loci-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
loci-core = { path = "../../crates/core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
