[package]
name = "loci-skills"
version = "0.1.0"
edition = "2021"

[dependencies]
loci-core = { path = "../../crates/core" }
loci-graph = { path = "../../crates/graph" }
loci-llm  = { path = "../../crates/llm" }
loci-tools = { path = "../../crates/tools" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
