[package]
name = "loci-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
loci-core = { path = "../../crates/core" }
async-trait = "0.1"
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
chrono = { workspace = true }
