[package]
name = "loci-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "bs_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "loci-desktop"
path = "src/main.rs"

[dependencies]
loci-core      = { path = "../../../crates/core" }
loci-llm       = { path = "../../../crates/llm" }
loci-graph     = { path = "../../../crates/graph" }
loci-memory    = { path = "../../../crates/memory" }
loci-knowledge = { path = "../../../crates/knowledge" }
loci-codebase  = { path = "../../../crates/codebase" }
tauri        = { version = "2", features = [] }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
anyhow       = { workspace = true }
uuid         = { workspace = true }
reqwest      = { version = "0.12", features = ["json", "rustls-tls"] }
